--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -611,7 +611,7 @@
                                             id="candidate_lname"
                                             placeholder="Doe"
                                             aria-describedby="lastNameHelp"
-                                            required
+                                            
                                         />
                                         <label for="candidate_lnmae">Last Name</label>
                                     </div>
@@ -639,7 +639,7 @@
                                             id="candidate_avb_date"
                                             placeholder="Availability"
                                             aria-describedby="availabilityHelp"
-                                            required
+                                            
                                         />
                                         <label for="candidate_avb_date">Availability</label>
                                     </div>
@@ -666,7 +666,7 @@
                                             class="form-select"
                                             id="company_status"
                                             aria-describedby="maritalStatusHelp"
-                                            required
+                                            
                                         >
                                             <option value="" disabled selected>Select Marital Status</option>
                                             <option value="Single">Single</option>
@@ -692,7 +692,7 @@
                                             id="candidate_dob"
                                             placeholder="Date of Birth"
                                             aria-describedby="dateOfBirthHelp"
-                                            required
+                                            
                                         />
                                         <label for="candidate_dob">Date of Birth</label>
                                     </div>
@@ -705,7 +705,7 @@
                                             id="candidate_birth_place"
                                             placeholder="Birth Place"
                                             aria-describedby="birthPlaceHelp"
-                                            required
+                                            
                                         />
                                         <label for="candidate_birth_place">Birth Place</label>
                                     </div>
@@ -722,7 +722,7 @@
                                             class="form-select"
                                             id="candidate_work_nautilus"
                                             aria-describedby="workedWithUsHelp"
-                                            required
+                                            
                                         >
                                             <option value="" disabled selected>Select Option</option>
                                             <option value="yes">Yes</option>
@@ -750,7 +750,7 @@
                             <div class="row">
                               <div class="col-md-6">
                                 <div class="form-floating">
-                                    <select id="candidate_experience" class="form-select" required>
+                                    <select id="candidate_experience" class="form-select" >
                                         <option value="" disabled selected>-- Select Experience --</option>
                                         <!-- Options will be dynamically added using JavaScript -->
                                     </select>
@@ -765,7 +765,7 @@
                                             class="form-select"
                                             id="candidate_zone"
                                             aria-describedby="zoneHelp"
-                                            required
+                                            
                                         >
                                             <option value="" disabled selected>Select Zone</option>
                                             <option value="East">East</option>
@@ -783,7 +783,7 @@
                             <div class="row">
                               <div class="col-md-6">
                                 <div class="form-floating">
-                                    <select id="candidate_grade" class="form-select" required>
+                                    <select id="candidate_grade" class="form-select" >
                                         <option value="" disabled selected>-- Select Grade --</option>
                                         <!-- Options will be dynamically added using JavaScript -->
                                     </select>
@@ -800,7 +800,7 @@
                                             id="candidate_boiler_suit_size"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_2_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_boiler_suit_size">Boiler suit size</label>
                                     </div>
@@ -817,7 +817,7 @@
                                             id="candidate_safety_shoe_size"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_1_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_safety_shoe_size">Safety Shoe Size</label>
                                     </div>
@@ -831,7 +831,7 @@
                                             id="candidate_height"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_2_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_height">Height(cm)</label>
                                     </div>
@@ -848,7 +848,7 @@
                                             id="candidate_weight"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_1_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_weight">Weight (KGS)</label>
                                     </div>
@@ -856,7 +856,7 @@
         
                                 <div class="col-md-6">
                                   <div class="form-floating">
-                                      <select id="candidate_I_country" class="form-select" required>
+                                      <select id="candidate_I_country" class="form-select" >
                                           <option value="" disabled selected>-- Select License Country --</option>
                                           <!-- Options will be dynamically added using JavaScript -->
                                       </select>
@@ -876,7 +876,7 @@
                                             id="candidate_indos_number"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_1_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_indos_number">INDOS Number</label>
                                     </div>
@@ -888,7 +888,7 @@
                                             class="form-select"
                                             id="candidate_company_status"
                                             aria-describedby="candidateStatusHelp"
-                                            required
+                                            
                                         >
                                             <option value="" disabled selected>Select Candidate Status</option>
                                             <option value="active">Active</option>
@@ -904,7 +904,7 @@
                             <div class="row">
                               <div class="col-md-6">
                                 <div class="form-floating">
-                                    <select id="candidate_group" class="form-select" required>
+                                    <select id="candidate_group" class="form-select" >
                                         <option value="" disabled selected>-- Select Group --</option>
                                         <option value="Officer">Officer</option>
                                         <option value="Rating">Rating</option>
@@ -924,7 +924,7 @@
                                             id="candidate_vendor"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_2_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_vendor">Vendor</label>
                                     </div>
@@ -934,7 +934,7 @@
                         <div class="card-body pb-0 pt-2 ">
                          <div class="col-md-12">
                                 <div class="form-floating">
-                                    <select id="candidate_us_visa" class="form-select" required>
+                                    <select id="candidate_us_visa" class="form-select" >
                                         <option value="" disabled selected>-- Select Option --</option>
                                         <option value="1">Yes</option>
                                         <option value="0">No</option>
@@ -956,7 +956,7 @@
                                             id="candidate_c_ad1"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_1_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_c_ad1">Address</label>
                                     </div>
@@ -969,7 +969,7 @@
                                           id="candidate_city"
                                           placeholder="Field X"
                                           aria-describedby="fieldX_1_Help"
-                                          required
+                                          
                                       />
                                       <label for="candidate_city">City</label>
                                   </div>
@@ -982,7 +982,7 @@
                                         id="candidate_c_state"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="candidate_c_state">State</label>
                                 </div>
@@ -995,7 +995,7 @@
                                       id="candidate_pin"
                                       placeholder="Field X"
                                       aria-describedby="fieldX_1_Help"
-                                      required
+                                      
                                   />
                                   <label for="candidate_pin">Pincode</label>
                               </div>
@@ -1004,7 +1004,7 @@
                             <div class="row g-2">
                                 <div class="col-md-4">
                                     <div class="form-floating">
-                                        <select class="form-select" id="countryCodeSelect" aria-label="Select Country Code" required>
+                                        <select class="form-select" id="countryCodeSelect" aria-label="Select Country Code" >
                                             <option value="">Code</option>
                                             <!-- Options will be dynamically added here -->
                                         </select>
@@ -1067,7 +1067,7 @@
                                       id="candidate_c_ad2"
                                       placeholder="Field X"
                                       aria-describedby="fieldX_2_Help"
-                                      required
+                                      
                                   />
                                   <label for="candidate_c_ad2">Address</label>
                               </div>
@@ -1083,7 +1083,7 @@
                                           id="candidate_p_city"
                                           placeholder="Field X"
                                           aria-describedby="fieldX_1_Help"
-                                          required
+                                          
                                       />
                                       <label for="candidate_p_city">City</label>
                                   </div>
@@ -1097,7 +1097,7 @@
                                           id="candidate_p_state"
                                           placeholder="Field X"
                                           aria-describedby="fieldX_2_Help"
-                                          required
+                                          
                                       />
                                       <label for="candidate_p_state">State</label>
                                   </div>
@@ -1113,7 +1113,7 @@
                                             id="candidate_p_pin"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_2_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_p_pin">Pincode</label>
                                     </div>
@@ -1124,7 +1124,7 @@
                                   <div class="row g-2">
                                       <div class="col-md-4">
                                           <div class="form-floating">
-                                              <select class="form-select" id="countryCodeSelect2" aria-label="Select Country Code" required>
+                                              <select class="form-select" id="countryCodeSelect2" aria-label="Select Country Code" >
                                                   <option value="">Code</option>
                                                   <!-- Options will be dynamically added here -->
                                               </select>
@@ -1139,7 +1139,7 @@
                                                   id="candidate_c_mobi2"
                                                   placeholder="Field X"
                                                   aria-describedby="fieldX_1_Help"
-                                                  required
+                                                  
                                               />
                                               <label for="candidate_c_mobi2">Mobile</label>
                                           </div>
@@ -1174,7 +1174,7 @@
                                             id="candidate_email2"
                                             placeholder="Field X"
                                             aria-describedby="fieldX_2_Help"
-                                            required
+                                            
                                         />
                                         <label for="candidate_email2">Email</label>
                                     </div>
