--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -934,7 +934,7 @@
                         <div class="card-body pb-0 pt-2 ">
                          <div class="col-md-12">
                                 <div class="form-floating">
-                                    <select id="candidate_us_visa" class="form-select" >
+                                    <select id="candidate_us_visa" class="form-select" required>
                                         <option value="" disabled selected>-- Select Option --</option>
                                         <option value="1">Yes</option>
                                         <option value="0">No</option>
