--- a/views/public/html/exemployees.html
+++ b/views/public/html/exemployees.html
@@ -129,7 +129,7 @@
     const token = localStorage.getItem('token');
     try {
         // Fetch all nationality data from the backend
-        const nationalityResponse = await axios.get('http://localhost:4000/others/country-codes');
+        const nationalityResponse = await axios.get('https://nemo.ivistaz.co/others/country-codes');
         const nationalityData = nationalityResponse.data;
 
         // Create a map to store nationality names based on their IDs
@@ -139,7 +139,7 @@
         });
 
         // Fetch the ex-employees data from the backend
-        const exEmployeesResponse = await axios.get('http://localhost:4000/candidate/exemployees');
+        const exEmployeesResponse = await axios.get('https://nemo.ivistaz.co/candidate/exemployees');
         const exEmployeesData = exEmployeesResponse.data;
 
         if (exEmployeesData.success) {
