--- a/views/public/html/reminder.html
+++ b/views/public/html/reminder.html
@@ -617,7 +617,7 @@
               // Function to fetch discussion reminders based on date filters
               async function fetchData(startDate, endDate) {
                   try {
-                      const url = `http://localhost:4000/candidate/reminder?startDate=${startDate}&endDate=${endDate}`;
+                      const url = `https://nemo.ivistaz.co/candidate/reminder?startDate=${startDate}&endDate=${endDate}`;
                       const response = await axios.get(url);
                       renderDiscussionReminders(response.data.discussions);
                   } catch (error) {
@@ -693,7 +693,7 @@
     // Send request to update logged status to false
     const userId = localStorage.getItem('userId');
     if (userId) {
-      axios.put(`http://localhost:4000/user/${userId}/logout`)
+      axios.put(`https://nemo.ivistaz.co/user/${userId}/logout`)
         .then(response => {
           console.log('Logged out successfully');
         })
