--- a/views/public/html/view-country.html
+++ b/views/public/html/view-country.html
@@ -20,7 +20,7 @@
     <meta name="description" content="" />
 
     
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
     <style>
       .loader {
         --r1: 154%;
