--- a/views/public/html/add-candidate.html
+++ b/views/public/html/add-candidate.html
@@ -45,7 +45,7 @@
       }
 </style>  
     
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
