--- a/views/public/html/edit-c-medicals.html
+++ b/views/public/html/edit-c-medicals.html
@@ -10,7 +10,7 @@
 >
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
     <meta
       name="viewport"
