--- a/views/public/html/edit-grade.html
+++ b/views/public/html/edit-grade.html
@@ -9,7 +9,7 @@
   data-template="vertical-menu-template-free"
 >
   <head>
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
     <meta charset="utf-8" />
     <meta
