--- a/views/public/html/exemployees.html
+++ b/views/public/html/exemployees.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+        <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
         <meta charset="utf-8" />
         <meta
