--- a/views/public/html/profile.html
+++ b/views/public/html/profile.html
@@ -9,7 +9,7 @@
     <title>Dashboard | Nsnemo</title>
     <!-- <link rel="stylesheet" href="../../staticfiles/style/assets/vendor/fonts/boxicons.css"> -->
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   
     <!-- Fonts -->
