--- a/views/public/html/seaservicetable.html
+++ b/views/public/html/seaservicetable.html
@@ -43,7 +43,7 @@
     <title>Sea Service | Nsnemo</title>
 
     <meta name="description" content="" />
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
     
 
