--- a/views/public/html/user-forgot-pass.html
+++ b/views/public/html/user-forgot-pass.html
@@ -20,7 +20,7 @@
     <meta name="description" content="" />
 
     
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
