--- a/views/public/html/view-company.html
+++ b/views/public/html/view-company.html
@@ -18,7 +18,7 @@
     <title>Company | Nsnemo</title>
 
     <meta name="description" content="" />
-    <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+    <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
     <style>
       .loader {
         --r1: 154%;
