--- a/views/public/html/x.html
+++ b/views/public/html/x.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Nautilus Pre-Employment Evaluation Sheet</title>
-      <link rel="icon" type="image/x-icon" href="../assets/img/illustrations/fav-icon.png" />
+      <link rel="icon" type="image/x-icon" href="./fav-icon.ico" />
 
 </head>
 <body>
