--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -1333,25 +1333,27 @@
                 
                     <button type="submit" class="btn btn-primary mb-3 mt-3">Submit</button>
                 </form>
+                <div class="table-responsive">
                 <table id="onBoardTable" class="table table-bordered table">
                     <thead>
                         <tr>
-                            <th style="font-size: 8px;">Candidate ID</th>
+                          <th style="font-size: 8px;">S.no</th>
+                            <th style="font-size: 8px;">Candidate&nbsp;ID</th>
                             <th style="font-size: 8px;">Name</th>
                             <th style="font-size: 8px;">Rank</th>
                             <th style="font-size: 8px;">Nationality</th>
-                            <th style="font-size: 8px;">Date and Place of Birth</th>
+                            <th style="font-size: 8px;">Date&nbsp;and&nbsp;Place&nbsp;of&nbsp;Birth</th>
                             <th style="font-size: 8px;">Age</th>
-                            <th style="font-size: 8px;">Passport</th>
-                            <th style="font-size: 8px;">Sign On</th>
-                            <th style="font-size: 8px;">Join Port</th>
-                            <th style="font-size: 8px;">Vessel Name</th>
+                            <th style="font-size: 8px;">Sign&nbsp;On</th>
+                            <th style="font-size: 8px;">Join&nbsp;Port</th>
+                            <th style="font-size: 8px;">Vessel&nbsp;Name</th>
                         </tr>
                     </thead>
                     <tbody id="onBoardTableBody">
                         <!-- Data will be populated here -->
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
         
@@ -1418,7 +1420,7 @@
                     </td>
                     </tr>
                     
-                    <div class="mb-3">
+                    <div class="mb-3 mt-3">
                         <label for="startDatecl" class="form-label">Start Date:</label>
                         <input type="date" id="startDatecl" class="form-control" name="startDatecl" required>
                     </div>
@@ -1430,22 +1432,20 @@
                 </form>
         
                 <!-- Table to display crew list -->
-                <div class="mt-4">
+                <div class="mt-4 table-responsive">
                     <table class="table table-bordered table" id="crewlisttable">
                         <thead>
                             <tr>
-                                <th style="font-size: 8px;">Candidate ID</th>
-                                <th style="font-size: 8px;">First Name</th>
-                                <th style="font-size: 8px;">Nationality</th>
-                                <th style="font-size: 8px;">C Rank</th>
+                              <th style="font-size:8px;">S.no</th>
+                                <th style="font-size: 8px;">Candidate&nbsp;ID</th>
+                            
+                                <th style="font-size: 8px;">Rank</th>
                                 <th style="font-size: 8px;">Vessel</th>
                                 <th style="font-size: 8px;">Wages</th>
-                                <th style="font-size: 8px;">Wages Type</th>
-                                <th style="font-size: 8px;">Sign On</th>
-                                <th style="font-size: 8px;">Sign Off</th>
-                                <th style="font-size: 8px;">Passport</th>
-                                <th style="font-size: 8px;">Indian CDC</th>
-                                <th style="font-size: 8px;">INDOS</th>
+                                <th style="font-size: 8px;">Wages&nbsp;Type</th>
+                                <th style="font-size: 8px;">Sign&nbsp;On</th>
+                                <th style="font-size: 8px;">Sign&nbsp;Off</th>
+                               
                             </tr>
                         </thead>
                         <tbody id="crewListTableBody">
