--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1344,8 +1344,9 @@
                                                             <th  style="font-size: 8px;">Swift Code</th>
                                                             <th style="font-size: 8px;">IFSC Code</th>
                                                             <th  style="font-size: 8px;">Passbook</th>
-                                                            <th  style="font-size: 8px;">pan_num</th>
-                                                            <th  style="font-size: 8px;">pan_card</th>
+                                                            <th  style="font-size: 8px;">PAN number</th>
+                                                            <th  style="font-size: 8px;">PAN Card</th>
+                                                            <th  style="font-size: 8px;">View PAN card</th>
                                                             <th  style="font-size: 8px;">Actions</th>
                                                         </tr>
                                                     </thead>
@@ -1414,6 +1415,7 @@
                                                             <th style="font-size: 8px;">Status</th>
                                                             <th style="font-size: 8px;">Amount</th>
                                                             <th style="font-size: 8px;">Upload File</th>
+                                                            <th style="font-size: 8px;">View File</th>
                                                             <th style="font-size: 8px;">Actions</th>
                                                         </tr>
                                                     </thead>
