--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -641,8 +641,8 @@
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
                                         <div  class="d-flex justify-content-center mt-2">
-                                          <div id="imageContainer" class="d-flex justify-content-center bg-primary text-white" style="width: 70px; height: 70px; border-radius: 50%; line-height: 70px;">
-                                            No&nbsp;Photo
+                                          <div  class="d-flex justify-content-center bg-primary text-white" style="width: 70px; height: 70px; border-radius: 50%; line-height: 70px;">
+                                          <img src=""id="imageContainer"  />   No&nbsp;Photo
                                         </div>
                                                                               </div>
                                       
