--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -640,11 +640,12 @@
                                 <div id="personnelContent" style="display: none;">
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
-                                        <div  class="d-flex justify-content-center mt-2">
-                                          <div  class="d-flex justify-content-center bg-primary text-white" style="width: 70px; height: 70px; border-radius: 50%; line-height: 70px;">
-                                          <img src="" id="imageContainer"  />   No&nbsp;Photo
-                                        </div>
-                                                                              </div>
+                                        <div class="rounded-circle" >
+                                          <!-- No need for the hidden input here -->
+                                          <div id="imageContainer" class="d-flex justify-content-center">
+                                              <img src="" alt=" &nbsp;No Photo present for the candidate" style="width: 50px;height: auto;">
+                                          </div>
+                                      </div>
                                       
                                         <!-- First set of input fields -->
                                         <div class="p-2">
