--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -640,10 +640,10 @@
                                 <div id="personnelContent" style="display: none;">
                                     <form id="view-candidate-form" >
                                       <div class="" style="max-height: 600px; width: auto; overflow: auto; font-size: 12px;">
-                                        <div class="rounded-circle" >
+                                        <div  >
                                           <!-- No need for the hidden input here -->
                                           <div id="imageContainer" class="d-flex justify-content-center">
-                                              <img src="" alt=" &nbsp;No Photo present for the candidate" style="width: 50px;height: auto;">
+                                              <img src="" alt=" &nbsp;No Photo present for the candidate" class="rounded-circle" style="width: 70px;height: auto;">
                                           </div>
                                       </div>
                                       
