--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -15,6 +15,7 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
     <style>
+      
  .small-font {
     font-size: 9px; /* Adjust the font size as needed */
     overflow: hidden; /* Ensure overflow text is handled */
@@ -911,7 +912,7 @@
                                               <table id="contractTable" class="table table table-striped table-bordered " style="font-size: 12px;">
                                                   <thead>
                                                       <tr>
-                                                          
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
                                                           <th scope="col"  style="font-size: 8px;">Rank</th>
                                                           <th scope="col" style="font-size: 8px;">Company</th>
                                                           <th scope="col" style="font-size: 8px;">VSL Name</th>
@@ -965,6 +966,8 @@
                                                 <table id="documentTable" class="table table table-striped table-bordered " style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
+
                                                             <th scope="col"  style="font-size: 8px;">Document</th>
                                                             <th scope="col"  style="font-size: 8px;">Document Number</th>
                                                             <th scope="col"  style="font-size: 8px;">Issue Date</th>
@@ -988,8 +991,6 @@
                                     </div>
                                 </div>
                                
-                                  <h4>Document Urls : </h4>
-                                  <div id="urlList"></div>
                                 </div>
                                 
                     
@@ -1005,6 +1006,8 @@
                                                 <table id="bankTable" class="table table table-bordered table-striped" style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
+
                                                             <th  style="font-size: 8px;">Bank Name</th>
                                                             <th  style="font-size: 8px;">Account Number</th>
                                                             <th  style="font-size: 8px;">Branch</th>
@@ -1041,6 +1044,8 @@
                                                 <table id="travelTable" class="table table table-bordered table-striped" style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
+
                                                             <th style="font-size: 8px;">Travel Date</th>
                                                             <th style="font-size: 8px;">Travel From</th>
                                                             <th style="font-size: 8px;">Travel To</th>
@@ -1076,6 +1081,8 @@
                                                 <table id="hospitalTable" class="table table table-bordered table-striped"  style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
+
                                                             <th style="font-size: 8px;">Hospital Name</th>
                                                             <th style="font-size: 8px;">Place</th>
                                                             <th style="font-size: 8px;">Date</th>
@@ -1110,6 +1117,8 @@
                                                 <table id="nkdTable" class="table table table-bordered table-striped" style="font-size: 12px;">
                                                     <thead>
                                                         <tr>
+                                                          <th scope="col" style="font-size: 8px;">S.no</th>
+
                                                             <th style="font-size: 8px;">Kin Name</th>
                                                             <th style="font-size: 8px;">Kin Relationship</th>
                                                             <th style="font-size: 8px;">Kin Contact</th>
@@ -1138,6 +1147,8 @@
                                                   <table id="seaServiceTable" class="table table table-striped table-bordered" style="font-size: 12px;">
                                                       <thead>
                                                           <tr>
+                                                            <th scope="col" >S.no</th>
+
                                                               <th scope="col">Company</th>
                                                               <th scope="col">Rank</th>
                                                               <th scope="col">Vessel</th>
@@ -1166,6 +1177,8 @@
                                       <table class="table table-bordered table table-striped">
                                           <thead>
                                               <tr>
+                                                <th >S.no</th>
+
                                                   <th>Evaluation Type</th>
                                                   <th>Interviewer Email</th>
 
